--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,15 @@
   <parent>
     <groupId>org.clojure</groupId>
     <artifactId>pom.contrib</artifactId>
-    <version>0.0.25</version>
+    <version>0.1.2</version>
   </parent>
 
   <developers>
     <developer>
       <name>Stuart Halloway</name>
+    </developer>
+    <developer>
+      <name>Nick Bailey</name>
     </developer>
   </developers>
 
